feat: add get user profile info endpoint
